fix svg overflow in firefox

--- a/app/styles/app/layouts/broadcasts.sass
+++ b/app/styles/app/layouts/broadcasts.sass
@@ -98,6 +98,8 @@
   width: 1.3em
   height: 2em
   vertical-align: middle
+  svg
+    overflow: visible
   .tower-path
     fill: #AEAEAE
   &:hover,
